force-app/main/default/objects/lightningbuddy__Action_User_Preference__c/lightningbuddy__Action_User_Preference__c.object-meta.xml
<CustomObject>
    <label>Action User Preference</label>
    <nameField>
        <displayFormat>GUPREF-{00000000}</displayFormat>
        <label>Action User Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action User Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>