force-app/main/default/objects/lightningbuddy__Action_User_Preference__c/fields/lightningbuddy__Action__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Action__c</fullName>
    <label>Action</label>
    <referenceTo>lightningbuddy__Actions__c</referenceTo>
    <relationshipLabel>Action User Preferences</relationshipLabel>
    <relationshipName>Action_User_Preferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>