force-app/main/default/objects/lightningbuddy__Action_User_Preference__c/fields/lightningbuddy__Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>